--- a/_data/data.yml
+++ b/_data/data.yml
@@ -32,13 +32,10 @@ sidebar:
     languages:
       title: Languages
       info:
-        - idiom: English
+        - idiom: French
           level: Native
 
-        - idiom: French
-          level: Professional
-
-        - idiom: Spanish
+        - idiom: English
           level: Professional
 
     interests:
@@ -54,39 +51,31 @@ sidebar:
           link:
 
 career-profile:
-    title: Career Profile
-    summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
-education:
-    title: Education
+    title: Responsabilities
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
+      - degree: Associate professor
+        university: [MINES Paris PSL](https://www.minesparis.psl.eu/) -- Energy and processes department -- Center for Processes, Renewables Energies and Energy Systems (PERSEE) center
+        time: since 2008
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
+          Prospective modeling of the energy transition.
+
+education:
+    title: Degree
+    info:
+      - degree: MSc in Applied Mathematics
+        university: University of Grenoble
+        time: 2004
+      - degree: Phd in Applied Mathematics
+        university: University of Grenoble
+        time: 2008
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          "Réduction de dimension en statistiques et application à la segmentation d'images hyperspectrales »
+      - degree: HDR in Energy transition modeling
+        university: University of Grenoble
+        time: 2020
+        details: |
+          " Applied mathematics for the energy transition modeling»
+
 experiences:
     title: Experiences
     info:
