--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,7 @@ career-profile:
           Energy and processes department
           PERSEE Center: Center for Processes, Renewables Energies and Energy Systems
           <a href="https://www.persee.minesparis.psl.eu/Recherche/Groupe-ERSEI/"> ERSEI group </a>
-      - role: <b>   Research topics </b> - Energy transition modeling. 
+      - role: <b>   Research topics </b> - Energy transition modeling.
         details: |
           - Energy demand modeling - Temporal and spatial demand modeling, building retrofits at the territory scale, evolution of heating, low carbon industry, role of hydrogen.
           - Planing and operation of multi-energy systems - Electric network planing (transport/distribution), hydrogen production systems planing, multi-energy systems.
@@ -109,7 +109,7 @@ career-profile_2:
       - role: <a href="https://www.linkedin.com/in/julie-perrin-147414188/">  Julie Perrin </a> - Postdoc -
         time: 2 years starting February 2023
         details: |
-           Joined coordination with <a href ="https://latts.fr/chercheur/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
+           Joined coordination with <a href ="https://www.csi.minesparis.psl.eu/equipe/chercheurs-associes/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
       - role: <a href="https://www.linkedin.com/in/anaelle-jodry/">  Anaelle Jodry </a> - PhD student-
         time: Since November 2020
         details: |
