--- a/_data/data.yml
+++ b/_data/data.yml
@@ -137,7 +137,7 @@ career-profile_2:
       - role: <a href="https://www.linkedin.com/in/laurent-cornaggia/">  Laurent Cornaggia  </a> - PhD student -
         time: Since January 2023
         details: |
-           Optimisation of medium voltage DC connection architechtures. CIFRE PhD financed by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
+           Optimisation of medium voltage DC connection architechtures. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
 
 career-profile_3:
     title: Available or upcomming positions
