--- a/_data/data.yml
+++ b/_data/data.yml
@@ -149,7 +149,7 @@ career-profile_3:
         details: |
            Multi-energy planing, 4 PhD thesis to start in 2023 and 2024 and a postdoc. Conditioned to a project success.
       - role: Permanent position (Tenure track)
-        time: to be posted soon, open for mid 2023.
+        time: <a href="https://academicpositions.fr/ad/universite-psl/2023/research-assistant-tenure-track-in-energetics-optimization-of-the-energy-systems-of-the-future-for-a-safe-effective-and-decarbonized-energy-transition/195452",see here  target="_blank" rel="nofollow"> see here</a>, apply before mid-april.
         details: |
            Multi-energy planing, Energy transition modeling, ...
 
