--- a/_data/data.yml
+++ b/_data/data.yml
@@ -51,7 +51,7 @@ sidebar:
 career-profile:
     title: Position and responsabilities
     info:
-      - role: Associate professor MINES Paris PSL
+      - role: Associate professor ("Chargé de Recherche") MINES Paris PSL
         time: since 2008
         details: |
           Energy and processes department
