--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,7 +49,7 @@ sidebar:
 
 
 career-profile:
-    title: Position and responsabilities
+    title: Positions and responsabilities
     info:
       - role: Associate Professor ("Chargé de Recherche") MINES Paris PSL
         time: since 2008
