--- a/_data/data.yml
+++ b/_data/data.yml
@@ -157,6 +157,11 @@ career-profile_3:
         time: <a href="https://academicpositions.fr/ad/universite-psl/2023/research-assistant-tenure-track-in-energetics-optimization-of-the-energy-systems-of-the-future-for-a-safe-effective-and-decarbonized-energy-transition/195452",see here  target="_blank" rel="nofollow"> see here</a>, apply before mid-april.
         details: |
            Multi-energy planing, Energy transition modeling, ...
+      - role: Internship (at PERSEE or at Zenon)
+        time: Whenever you want
+        details: |
+          For an internship at PERSEE, please contact me directly. For an internship at Zenon as an analyst <a href="https://www.linkedin.com/posts/zenon-research_stage-research-technologies-activity-7061635425467002881-aLSd?utm_source=share&utm_medium=member_desktop"> (see here for possible subject) </a> and send an email at jobs@zenon.ngo.
+
 
 publications:
     title: Publications
