--- a/_data/data.yml
+++ b/_data/data.yml
@@ -150,7 +150,7 @@ career-profile_3:
       If you are looking for an internship or if you wish to consider a PhD in the long term, feel free to contact me.
     info:
       - role: Postdoc and PhD.
-        time: 1 to 4 years starting September 2023
+        time: Usually in june for september, but you can apply continuously
         details: |
            Multi-energy planing, 4 PhD thesis to start in 2023 and 2024 and a postdoc.
       - role: Permanent position (Tenure track)
