--- a/_data/data.yml
+++ b/_data/data.yml
@@ -51,13 +51,18 @@ sidebar:
 career-profile:
     title: Positions and responsabilities
     info:
-      - role: Associate Professor (Chargé de Recherche) MINES Paris PSL
+      - role: Associate Professor at MINES Paris PSL
         time: since 2008
         details: |
           Energy and processes department
           PERSEE Center: Center for Processes, Renewables Energies and Energy Systems
           <a href="https://www.persee.minesparis.psl.eu/Recherche/Groupe-ERSEI/"> ERSEI group </a>
           10 PhD students already defended under my supervision, 7 on-going PhD under my direction, 4 ongoing postdocs under my direction (see <a href="https://www.robingirard.eu/#Current"> below </a>).
+      - role: Head of Science at Zenon
+        time: since 2023
+        details: |
+          <a href="https://www.zenon.ngo/"> Zenon </a> is the french Climate Tech think tank.
+
       - role: <b>   Research topics </b> - Energy transition modeling.
         details: |
           - Energy demand modeling - Temporal and spatial demand modeling, building retrofits at the territory scale, evolution of heating, low carbon industry, role of hydrogen.
