--- a/_data/data.yml
+++ b/_data/data.yml
@@ -73,7 +73,7 @@ career-profile:
         details: |
           - Deputy head of Energy Major for "cycle ingénieur civil" of MINES Paris PSL. Around 30 students every year. Head of Energy Major is my colleague <a href="https://www.minesparis.psl.eu/Services/Annuaire/bruno-duplessis." target="_blank" rel="nofollow">Bruno Duplessis </a>
           - Head of <a href="https://www.persee.minesparis.psl.eu/Formation/CTE/#:~:text=Le%20PESTO%2DEnergie%20(Programme%20d,%2C%20Production%2C%20Stockage%20et%20Transport" target="_blank" res="nofollow"> PESTO Energy Transition.</a> Six weeks of courses, projects, visits and conferences for students of <a href="https://fr.wikipedia.org/wiki/Corps_des_mines" target="_blank" rel="nofollow">le Corps des mines </a>
-          - Head of <a href="{{site.url}}/MINES-UE14-miniprojet.html" target="_blank" rel="nofollow"> "mini-projets de l’UE-14"  </a> du cycle ingénieurs civils. Energy-climate projects for 1st year students (list of past year projects available on the link).
+          - Head of <a href="https://www.robingirard.eu/MINES-UE14-miniprojet.html" target="_blank" rel="nofollow"> "mini-projets de l’UE-14"  </a> du cycle ingénieurs civils. Energy-climate projects for 1st year students (list of past year projects available on the link).
           - <a href="https://executive-education.minesparis.psl.eu/formations/evolution-du-systeme-electrique-dans-un-contexte-de-transition-energetique/"  target="_blank" rel="nofollow">  Evolution du système électrique dans un contexte de transition énergétique. </a> One week course+practical work (available for MINES Paris PSL students but also to external)
           - <a href="https://psl-week.psl.eu/LISTE-DES-PSL-WEEKS.php"  target="_blank" rel="nofollow">  Massification de la rénovation thermique de bâtiments. </a> One week course+practical work (mainly coordination from my side).
           - Courses and conferences for ingeneering and business schools on energy transition and low carbon economy (1h to 12h).
@@ -179,7 +179,7 @@ publications:
       - title: A conditioned and regularized approach for large-scale intraday forecasting of wind power.
         authors: Simon Camal, Robin Girard, Maxime Fortin, Augustin Touron, Laurent Dubus.
 
-      - title: Calibration method for an open source model to simulate building energy at territorial scale,
+      - title: Calibration method for an open source model to simulate building energy at territorial scale <a href="https://www.sciencedirect.com/science/article/abs/pii/S0378778823004358" target="_blank" rel="nofollow"> -Published-June 2023- </a>,
         authors: Rit Martin, Villot Jonathan, Thorel Mathieu, Seddik Abdelouadoud, Girard Robin.
 
       - title: Comparing the relative impacts of investment constraints and temporal detail on capacity expansion model outcomes.
