update publications PhDs

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -193,10 +193,10 @@ publications:
       - title: Comparing the relative impacts of investment constraints and temporal detail on capacity expansion model outcomes.
         authors: Thomas Heggarty, Jean-Yves Bourmaud, Robin Girard, Georges Kariniotakis.
 
-      - title: Optimisation of hydrogen production systems deployement at the scale of a territory <a href="https://www.sciencedirect.com/science/article/pii/S0959652623029086" target="_blank" rel="nofollow"> -Published in Journal of Cleaner Production- Sept 2023- </a>.
+      - title: Optimisation of hydrogen production systems deployement at the scale of a territory <a href="https://www.sciencedirect.com/science/article/pii/S0959652623029086" target="_blank" rel="nofollow"> -Published in Journal of Cleaner Production- Sept 2023 - </a>.
         authors: Anaëlle Jodry, Robin Girard, Pedro Affonso Nobrega, Robin Molinier, Moulay-Driss Elalaouifaris.
 
-      - title: Techno-economic evaluation and resource assessment of hydrogen production through offshore wind farms: A European perspective <a href="https://www.sciencedirect.com/science/article/pii/S1364032123005567?via%3Dihub" target="_blank" rel="nofollow"> -Published in Journal of Sustainable Energy Review- Sept 2023- </a>..
+      - title: Techno-economic evaluation and resource assessment of hydrogen production through offshore wind farms: A European perspective <a href="https://www.sciencedirect.com/science/article/pii/S1364032123005567" target="_blank" rel="nofollow"> - Published in Journal of Sustainable Energy Review - Sept 2023 - </a>.
         authors: Antoine Rogeau, Matthieu de Coatpont, Guillaume Erbs, Pedro Affonso Nobrega, Robin Girard
 
 
