phd student list

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -99,55 +99,48 @@ career-profile_2:
 
     title: Current students (Postdoc and PhD students)
     info:
-      - role: <a href="https://www.linkedin.com/in/arogeau/">  Antoine Rogeau </a> - Postdoc -
-        time: 2 years starting February 2022
-        details: |
-           Demand prospective modeling, industry decarbonation, renewable variability simulation, offshore wind power and hydrogen production. Funded by <a href="https://www.engieimpact.com/fr/"> ENGIE Impact </a> and french government.
       - role: <a href="https://www.linkedin.com/in/yassine-abdelouadoud-a4b4831b9/">  Yassine Abdelouadoud </a> - Postdoc -
         time: 2 years starting October 2022
         details: |
            Modeling of the electric distribution system and its evolution in the energy transition context. Impact of electrification of heating and transport, and of renewable electricity production. Value of flexibility in low voltage network. Postdoc funded by <a href ="https://www.roseautechnologies.com/fr/"> Roseau Technologie </a> and french government.
-      - role: Kevin Bellinger  - Postdoc -
-        time: 1 years starting February 2022 -  Now at RTE (french TSO)--
-        details: |
-           Large scale machine learning for bottom up modeling of energy consumption. Postdoc funded by french DSO <a href ="https://www.enedis.fr/"> ENEDIS </a>.
       - role: <a href="https://www.linkedin.com/in/julie-perrin-147414188/">  Julie Perrin </a> - Postdoc -
         time: 2 years starting February 2023
         details: |
            Joined coordination with <a href ="https://www.csi.minesparis.psl.eu/equipe/chercheurs-associes/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
-      - role: <a href="https://www.linkedin.com/in/anaelle-jodry/">  Anaelle Jodry </a> - PhD student-
-        time: Since November 2020 -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#AnaelleJodry">  Anaelle Jodry </a> - PhD student-
+        time: Since November 2023 -
         details: |
            Hydrogen deployment trajectories in energy hub. PhD partially funded by <a href="https://www.airliquide.com/fr"> Air liquide</a>.
       - role: <a href="https://www.linkedin.com/in/martin-rit/">  Martin Rit  </a> - PhD student -
         time: Since February 2021
         details: |
            Evaluation of thermal retrofit potential at the territory scale in the context of the energy transition. PhD funded by <a href="http://www.cstb.fr/fr/"> CSTB</a>.
-      - role: <a href="https://www.linkedin.com/in/quentin-raillard/"> Quentin Raillard-Cazanove </a>  - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#QuentinRaillard-Cazanove"> Quentin Raillard-Cazanove </a>  - PhD student -
         time: Since November 2021
         details: |
            Modeling of industry decarbonation and its impact on the electric system. Funded by  <a href ="https://www.carnot-mines.eu/fr"> Institut Carnot MINES</a>.
-      - role: <a href="https://www.linkedin.com/in/owen-palmer-79868167/">  Owen Palmer  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#OwenPalmer">  Owen Palmer  </a> - PhD student -
         time: Since May 2022
+
         details: |
            Optimisation of decision making for PV+hydrogen+storage projects. CIFRE PhD funded by <a href ="https://verso.energy/"> Verso Energy</a>.
-      - role: <a href="https://www.linkedin.com/in/maxime-vrain-16a049172/?originalSubdomain=fr">  Maxime Vrain   </a> - PhD student -
-        time: Since October 2021
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#MaximeVrain"> Maxime Vrain  </a> - PhD student -
+        time: Since October 2022
         details: |
            Vectors coupling in the 2050 european energy system. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
-      - role: <a href="https://www.linkedin.com/in/thibault-goessel/"> Thibault Goessel </a>  - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#ThibaultGoessel"> Thibault Goessel </a>  - PhD student -
         time: Since November 2022
         details: |
            LCA of building renovation toward carbon neutrality. PhD funded by <a href="http://www.cstb.fr/fr/"> CSTB</a>.
-      - role: <a href="https://www.linkedin.com/in/laurent-cornaggia/">  Laurent Cornaggia  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#LaurentCornaggia"> Laurent Cornaggia  </a> - PhD student -
         time: Since January 2023
         details: |
            Optimisation of medium voltage DC connection architechtures. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
-      - role: <a https://www.linkedin.com/in/thibaut-knibiehly/">  Thibaut Knibiehly  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#ThibautKnibiehly">  Thibaut Knibiehly  </a> - PhD student -
         time: Since June 2023
         details: |
            Planning of multi-energy system. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
-      - role: <a https://www.linkedin.com/in/hugo-hamburger-92a994161/">  Hugo Hamburger  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html/#HugoHamburger"> Hugo Hamburger  </a> - PhD student -
         time: Since September 2023
         details: |
            Coupling optimisation methodology for energy system planning. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
@@ -160,7 +153,7 @@ career-profile_3:
       - role: Postdoc and PhD.
         time: Usually in june for september, but you can apply continuously
         details: |
-           Multi-energy planing, 4 PhD thesis to start in 2023 and 2024 and a postdoc.
+           Multi-energy planing, 2 PhD thesis to start in 2024 and a postdoc.
       - role: Permanent position (Tenure track)
         time: <a href="https://academicpositions.fr/ad/universite-psl/2023/research-assistant-tenure-track-in-energetics-optimization-of-the-energy-systems-of-the-future-for-a-safe-effective-and-decarbonized-energy-transition/195452",see here  target="_blank" rel="nofollow"> see here</a>, apply before mid-april.
         details: |
