--- a/_data/data.yml
+++ b/_data/data.yml
@@ -182,7 +182,7 @@ publications:
       - title: Calibration method for an open source model to simulate building energy at territorial scale <a href="https://www.sciencedirect.com/science/article/abs/pii/S0378778823004358" target="_blank" rel="nofollow"> -Published-June 2023- </a>,
         authors: Rit Martin, Villot Jonathan, Thorel Mathieu, Seddik Abdelouadoud, Girard Robin.
 
-      - title: Comparing the relative impacts of investment constraints and temporal detail on capacity expansion model outcomes.
+      - title: Comparing the relative impacts of investment constraints and temporal detail on capacity expansion model outcomes. <a href="https://www.sciencedirect.com/science/article/pii/S0360544224000021?dgcid=author"  target="_blank" rel="nofollow"> -Published in Energy-January 2024- </a>,
         authors: Thomas Heggarty, Jean-Yves Bourmaud, Robin Girard, Georges Kariniotakis.
 
       - title: Optimisation of hydrogen production systems deployement at the scale of a territory <a href="https://www.sciencedirect.com/science/article/pii/S0959652623029086" target="_blank" rel="nofollow"> -Published in Journal of Cleaner Production- Sept 2023 - </a>.
