--- a/_data/data.yml
+++ b/_data/data.yml
@@ -107,7 +107,7 @@ career-profile_2:
         time: 2 years starting February 2023
         details: |
            Joined coordination with <a href ="https://www.csi.minesparis.psl.eu/equipe/chercheurs-associes/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#AnaelleJodry">  Anaelle Jodry </a> - PhD student-
+      - role: <a href="https://www.robingirard.eu/StudentList.html#AnaelleJodry">  Anaelle Jodry </a> - PhD student-
         time: Since November 2023 -
         details: |
            Hydrogen deployment trajectories in energy hub. PhD partially funded by <a href="https://www.airliquide.com/fr"> Air liquide</a>.
@@ -115,32 +115,32 @@ career-profile_2:
         time: Since February 2021
         details: |
            Evaluation of thermal retrofit potential at the territory scale in the context of the energy transition. PhD funded by <a href="http://www.cstb.fr/fr/"> CSTB</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#QuentinRaillard-Cazanove"> Quentin Raillard-Cazanove </a>  - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#QuentinRaillard-Cazanove"> Quentin Raillard-Cazanove </a>  - PhD student -
         time: Since November 2021
         details: |
            Modeling of industry decarbonation and its impact on the electric system. Funded by  <a href ="https://www.carnot-mines.eu/fr"> Institut Carnot MINES</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#OwenPalmer">  Owen Palmer  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#OwenPalmer">  Owen Palmer  </a> - PhD student -
         time: Since May 2022
 
         details: |
            Optimisation of decision making for PV+hydrogen+storage projects. CIFRE PhD funded by <a href ="https://verso.energy/"> Verso Energy</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#MaximeVrain"> Maxime Vrain  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#MaximeVrain"> Maxime Vrain  </a> - PhD student -
         time: Since October 2022
         details: |
            Vectors coupling in the 2050 european energy system. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#ThibaultGoessel"> Thibault Goessel </a>  - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#ThibaultGoessel"> Thibault Goessel </a>  - PhD student -
         time: Since November 2022
         details: |
            LCA of building renovation toward carbon neutrality. PhD funded by <a href="http://www.cstb.fr/fr/"> CSTB</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#LaurentCornaggia"> Laurent Cornaggia  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#LaurentCornaggia"> Laurent Cornaggia  </a> - PhD student -
         time: Since January 2023
         details: |
            Optimisation of medium voltage DC connection architechtures. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#ThibautKnibiehly">  Thibaut Knibiehly  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#ThibautKnibiehly">  Thibaut Knibiehly  </a> - PhD student -
         time: Since June 2023
         details: |
            Planning of multi-energy system. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
-      - role: <a href="https://www.robingirard.eu/StudentList.html/#HugoHamburger"> Hugo Hamburger  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#HugoHamburger"> Hugo Hamburger  </a> - PhD student -
         time: Since September 2023
         details: |
            Coupling optimisation methodology for energy system planning. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
