--- a/_data/data.yml
+++ b/_data/data.yml
@@ -146,22 +146,9 @@ career-profile_2:
            Coupling optimisation methodology for energy system planning. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
 
 career-profile_3:
-    title: Available or upcomming positions
+    title: Available or upcomming positions : see the <a href="https://www.robingirard.eu/JobOffer.html"> full list here.  </a>
     intro: |
       If you are looking for an internship or if you wish to consider a PhD in the long term, feel free to contact me.
-    info:
-      - role: Postdoc and PhD.
-        time: Usually in june for september, but you can apply continuously
-        details: |
-           Multi-energy planing, 2 PhD thesis to start in 2024 and a postdoc.
-      - role: Permanent position (Tenure track)
-        time: <a href="https://academicpositions.fr/ad/universite-psl/2023/research-assistant-tenure-track-in-energetics-optimization-of-the-energy-systems-of-the-future-for-a-safe-effective-and-decarbonized-energy-transition/195452",see here  target="_blank" rel="nofollow"> see here</a>, apply before mid-april.
-        details: |
-           Multi-energy planing, Energy transition modeling, ...
-      - role: Internship (at PERSEE or at Zenon)
-        time: Whenever you want
-        details: |
-          For an internship at PERSEE, please contact me directly. For an internship at Zenon as an analyst <a href="https://www.linkedin.com/posts/zenon-research_stage-research-technologies-activity-7061635425467002881-aLSd?utm_source=share&utm_medium=member_desktop"> (see here for possible subject) </a> and send an email at jobs@zenon.ngo.
 
 
 publications:
