--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,7 +8,7 @@ sidebar:
 
     # Profile information
     name: Robin Girard
-    tagline: Associate Professor
+    tagline: Full Professor (Directeur de Recherche)
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
@@ -51,8 +51,8 @@ sidebar:
 career-profile:
     title: Positions and responsabilities
     info:
-      - role: Associate Professor at MINES Paris PSL
-        time: since 2008
+      - role: Full Professor (Directeur de Recherche) at MINES Paris PSL
+        time: since 2023
         details: |
           Energy and processes department
           PERSEE Center: Center for Processes, Renewables Energies and Energy Systems
